notes for next steps/ideas, started on crud for trails and users
